ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/Apex_Log__c.object-meta.xml
<CustomObject>
    <description>Used to write Apex debug and error logs</description>
    <label>Artisan Assist Apex Log</label>
    <nameField>
        <label>Apex Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artisan Assist Apex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>