ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Additional info like context variable to help in debugging the issue</description>
    <inlineHelpText>Additional info like context variable to help in debugging the issue</inlineHelpText>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>