ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class in which this log record is created</description>
    <inlineHelpText>Class in which this log record is created</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>