ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of exception if the logs is for an exception</description>
    <inlineHelpText>Type of exception if the logs is for an exception</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>