ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line Number in the code at which this log record is created</description>
    <inlineHelpText>Line Number in the code at which this log record is created</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>