ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>Indicates if the log is for an exception (ERROR) or for debugging</description>
    <inlineHelpText>Indicates if the log is for an exception (ERROR) or for debugging</inlineHelpText>
    <label>Log Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>