ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Holds exception/debug message</description>
    <inlineHelpText>Holds exception/debug message</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>