ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace of the exception log</description>
    <inlineHelpText>Stack trace of the exception log</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>