ArtisanAssistCode/force-app/main/default/objects/Apex_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Log_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>